Bugfix for offscreen/lazyloaded img w font size

--- a/assets/scss/what-i-do.scss
+++ b/assets/scss/what-i-do.scss
@@ -7,6 +7,10 @@
   }
 }
 
+.wid-text {
+  font-size: 18px;
+}
+
 @media screen and (max-width: 991px) {
   .expertise-clear {
     clear: both;
